--- a/figures/figures.Rmd
+++ b/figures/figures.Rmd
@@ -20,7 +20,21 @@ knitr::opts_chunk$set(fig.pos = "H")
 \pagebreak
 
 ```{r}
-source("../scripts/99_utils.R")
+if(dir.exists("../scripts")){
+    source("../scripts/99_utils.R")
+}else{
+    source("scripts/99_utils.R")
+}
+
+
+dt <- read.csv(
+    "../../Data/Euroflux/BE-Lon/L2-L4_2004-2012/EFDC_L2_Flx_BELon_2008_v017_30m.txt",
+    header = TRUE,
+    colClasses = c("TIMESTAMP_START" = "character", "TIMESTAMP_END" = "character"), 
+    na.strings = "-9999") %>%
+    clean_names()
+
+head(dt)
 ```
 
 ```{r map}
