--- a/figures/figures.Rmd
+++ b/figures/figures.Rmd
@@ -52,8 +52,9 @@ dt_sites <- read.csv(
     dplyr::mutate_all(na_if, "") %>%
     st_as_sf(coords = c("site_longitude", "site_latitude"), crs = 4326)
 
-dt_dist <- unlist(st_distance(coords_ire, dt_sites))
-dt_sites_close <- dt_sites[dt_dist < units::as_units(100, "mi"),]
+dt_sites$dist <- unlist(list(unlist(st_distance(coords_ire, dt_sites)))) / 1609.34
+dt_sites_close <- dt_sites[dt_sites$dist < 100,]
+head(dplyr::arrange(dt_sites_close, dist)$dist)
 
 rmarkdown::render_delayed({
     mapview(dt_sites_close) + mapview(coords_ire, color = "red")
