towards cartopy maps

--- a/figures/figures.Rmd
+++ b/figures/figures.Rmd
@@ -55,7 +55,8 @@ dt_sites <- read.csv(
 dt_sites$dist <- unlist(list(unlist(st_distance(coords_ire, dt_sites)))) / 1609.34
 dt_sites_close <- dt_sites[dt_sites$dist < 100,] %>%
     dplyr::arrange(dist)
-head(dt_sites_close$dist)
+head(dplyr::select(dt_sites_close, site_code, dist))
+    
 st_coordinates(dt_sites_close[1,])
 
 rmarkdown::render_delayed({
