--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -1,4 +1,4 @@
-i\documentclass{article}
+\documentclass{article}
 
 \usepackage{arxiv}
 
@@ -24,15 +24,41 @@ i\documentclass{article}
 \date{} 					% Or removing it
 
 \author{
-	\href{https://orcid.org/0000-0002-5924-2464}{\includegraphics[scale=0.06]{orcid.pdf}\hspace{1mm}Jemma Stachelek},
-	\href{https://orcid.org/0000}{\includegraphics[scale=0.06]{orcid.pdf}\hspace{1mm}
-	 Second Author},
-	\href{https://orcid.org/0000}{\includegraphics[scale=0.06]{orcid.pdf}\hspace{1mm}
-	 Third Author} \\
-	Earth and Environmental Sciences\\
+	\href{https://orcid.org/0000-0002-5924-2464}{\includegraphics[scale=0.06]{orcid.pdf}\hspace{1mm}Jemma Stachelek$^1$} \\
+	$^1$ Earth and Environmental Sciences\\
 	Los Alamos National Laboratory\\
 	Los Alamos, NM, USA, 87544 \\
 	\texttt{jsta@lanl.gov} \\
+	\And
+	Vachel A. Kraklow$^2$ \\
+	$^2$ Earth and Environmental Sciences\\
+	Los Alamos National Laboratory\\
+	Los Alamos, NM, USA, 87544 \\
+	\And
+	E. Christi Thompson$^3$ \\
+	$^3$ Earth and Environmental Sciences\\
+	Los Alamos National Laboratory\\
+	Los Alamos, NM, USA, 87544 \\
+	\And
+	\textbf{L. Turin Dickman}$^2$ \\
+	$^2$ Earth and Environmental Sciences\\
+	Los Alamos National Laboratory\\
+	Los Alamos, NM, USA, 87544 \\
+	\And
+	\textbf{Emily Casleton}$^3$ \\
+	$^3$ Earth and Environmental Sciences\\
+	Los Alamos National Laboratory\\
+	Los Alamos, NM, USA, 87544 \\
+	\And
+	\textbf{Sanna Sevanto}$^2$ \\
+	$^2$ Earth and Environmental Sciences\\
+	Los Alamos National Laboratory\\
+	Los Alamos, NM, USA, 87544 \\
+	\And
+	\textbf{Ann Junghans}$^4$ \\
+	$^4$ Earth and Environmental Sciences\\
+	Los Alamos National Laboratory\\
+	Los Alamos, NM, USA, 87544
 }
 
 % Uncomment to remove the date
@@ -40,8 +66,8 @@ i\documentclass{article}
 
 % Uncomment to override  the `A preprint' in the header
 \renewcommand{\headeright}{\href{https://doi.org/}{DOI: 10.000/XXXXX}}
-\renewcommand{\undertitle}{This is a draft of a Manuscript in preparation for publication \href{https://doi.org/10.1000/XXXXX}{DOI: 10.1000/XXXXX}}
-\renewcommand{\shorttitle}{Eddy covariance towers and abnormal releases}
+\renewcommand{\undertitle}{This is a draft of a Manuscript in preparation for publication in Nature: Communications \\ \href{https://doi.org/10.1000/XXXXX}{DOI: 10.1000/XXXXX}}
+\renewcommand{\shorttitle}{Eddy covariance towers as sentinels}
 
 %%% Add PDF metadata to help others organize their library
 %%% Once the PDF is generated, you can check the metadata with
@@ -56,41 +82,55 @@ pdfauthor={Jemma Stachelek}
 \maketitle
 \doublespacing
 
+\vspace{-2em}
+
 \section*{Abstract}	
-    Ensuring accurate detection and attribution of abnormal releases of radioactive material is critical for ensuring human health and safety. Most commonly, such detection is accomplished via active monitoring approaches involving the collection of physical samples. This is labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. As an alternative, we developed a passive monitoring approach using eddy flux tower data records to identify signals from a known abnormal release and quantify the extent to which that signal also occurs at other times in the data record. We tested our approach relative to a known release in Belgium nominally occurring on August 23, 2008. With this approach, we identified several potential heretofore unidentified abnormal releases. We found that the occurrence of these releases was consistent with wind direction from the known release site to a given flux tower. We conclude that although eddy flux tower data records are a potentially rich target for these types of data mining efforts, geographic sparsity in tower locations as well as noisiness of the data streams may limit their usefulness to targeted constituents in relatively limited geographic regions.
+Ensuring accurate detection and attribution of abnormal releases of radioactive material is critical for protecting human health and safety. Most commonly, such detection is accomplished via active monitoring approaches involving the collection of physical samples. This is labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. As an alternative first step towards passive monitoring, we developed an approach using eddy flux tower data records to identify signals from a known abnormal release and quantify the extent to which that signal also occurs at other times in the data record. Through two case-studies, one of which targeted the Fukushima nuclear disaster and the other targeting a radioisotope production facility, we tested our approach and identified several potential heretofore unidentified abnormal releases that were consistent with atmospheric circulation patterns and/or wind direction from known release sites. Because our approach is relatively simple and is resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration anomalies in flux tower data to ensure human health and industrial safety.
 
 \section{Introduction}
-Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific trace gas measurements \citep{carriganTraceGasEmissions1996} sometimes as a part of international monitoring networks (e.g., Sangiorgi et al. 2020). A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Such active monitoring is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
+Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific sampling or trace gas measurements (Loyalka 1983) sometimes as a part of international monitoring networks (e.g., Sangiorgi et al. 2020). A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Active monitoring with such means is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
 
-A potential alternative to active monitoring is passive monitoring (e.g., seismic monitoring for underground nuclear explosions, UNEs, Li et al. 2023). Although existing passive monitoring approaches are already critical components of abnormal release detection and tracking programs, diversification-of-approach may increase the programs' sensitivity and comprehensiveness. With a greater diversity of approaches, monitoring programs may be able to detect a wider array of constituents with differing characteristics. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves  the use of eddy flux tower data records to capture the signal from “known'' abnormal releases. We then use this signal to investigate the extent to which it also occurs at other times in the data record. We focused on eddy flux towers as they are a potential source of abnormal release “signatures,” are globally distributed, have been in near continuous operations for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
+A potential alternative to active monitoring is passive monitoring (e.g., the German Integrated Measuring and Information system [IMIS] and the International Monitoring System [IMS], Bieringer and Schlosser, 2004). Although existing wide area monitoring systems are already critical components of abnormal release detection and tracking programs (Medici et al. 2011), diversification-of-approach may increase the programs’ sensitivity and comprehensiveness. With a greater diversity of methods, monitoring programs may be able to detect a wider array of constituents with differing characteristics. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves the use of eddy covariance data to capture a signal from known abnormal releases. This signal is then used to investigate whether additional potential abnormal releases exist at other times in the data record. We focused on eddy flux towers, as they are a potential source of abnormal release signatures, are globally distributed, have been in near continuous operation for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
 
-Our use of flux tower records for signal detection stands in contrast to their typical use for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange (Baldocchi et al. 2018), our use treats each variable as a potential indirect signal of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation. We specifically focused on short-term vegetation stress responses (on the order of days to weeks) to potential deposition of radioactive material rather than chronic long-term signals (on the order of years to decades). First, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from a site in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The release originated from waste tanks into the atmosphere at the Institut des Radioelements (IRE) and lasted for several days totaling 50 GBq 131I. Grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg (Carle et al. 2010). We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other nearby eddy flux towers. 
+Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange (Baldocchi et al. 2018), our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way (Nobel 2020).
+
+We specifically focused on short-term responses of vegetation (on the order of days to weeks) to potential deposition of radioactive material rather than chronic long-term signals (on the order of years to decades). In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq 131I (Carle et al. 2010). For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals influx tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days eventually dispersing throughout the entire northern hemisphere (Meszaros et al. 2016). We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other nearby eddy flux towers. While little is known about the direct or indirect effects of radioactive material on vegetation, we expect that exposure may cause declines in photosynthetic CO2 uptake. This may be expressed as a change in the slope of the CO2 relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
 
 
 \section{Methods}
 
 \subsection{Data Description}
 
-We gathered measurements from eddy covariance platforms (i.e., “towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Only three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1). Apart from standard content formatting (e.g., timestamps, dropping empty columns, etc.), we processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD) or net solar radiation (netrad) and 2) defining an “event period” based on the publicly known date of the abnormal release. We focused on the following potential data streams in the eddy covariance tower records where the following were treated as dependent “response” variables: carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. We also used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. Each of these variables were typically recorded by the flux tower instrumentation at a 30 minute interval barring any gaps due to missing data.
+For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Only three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively.
 
-\subsection{Modeling approach}
+For the Fukushima case study, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). For contrast to the Northern Hemisphere sites where we expect a higher likelihood of impact, we also gathered measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network (Cleverly 2011). We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
-Our analysis screened pairwise relationships between the aforementioned independent and dependent variables starting using a linear regression fit between each pair for the entire period of record. We excluded variable pairs from further analysis if the overall coefficient of determination (R2) was less than 0.1. We determined from visual inspection that many of the rejected variable pairs appeared to have a nonlinear relationship. We then fit an interaction model of the following form where Y represents a continuous response (e.g., CO2, latent heat, etc.), X is an independent variable (e.g., air temperature, humidity, etc.), and W is a categorical variable representing the “period” of observation (i.e., during, before, or after, the event):
+\subsection{Modeling Approach}
+We processed each data file by 1) excluding nighttime measurements based on photosynthetic photon flux density (PPFD > 100 µmol m-2 s-1) or net solar radiation (netrad > 0 W/m2) and 2) defining an “event period” following the publicly released date of the abnormal release. We focused on the following variables as potentially containing a signature of the release : carbon dioxide, carbon dioxide flux (fc), latent heat (le), and sensible heat flux (h). Conversely, the following were treated as independent explanatory variables: wind speed, precipitation, atmospheric pressure, relative humidity, photosynthetic photon flux density, air temperature, and net radiation. Additionally, we used wind direction data from the eddy flux towers to determine when or if any released material might plausibly reach a particular location. Each of these variables were recorded by the flux tower instrumentation at a 30 minute (min) interval barring any gaps due to missing data.
 
-% Y = 0+ 1X1 + B2W2+ 3X1W2
+To begin our analysis, we screened all pairwise, linear relationships between the aforementioned independent and dependent variables using a linear regression fit between each pair for the entire period of record (n=51). Variable pairs were excluded from further analysis if the overall coefficient of determination ($R^2$) was less than 0.1. This low threshold was chosen to maximize the number of pairs that could potentially be investigated more deeply. From visual inspection, we determined that many of the rejected variable pairs appeared to have a nonlinear relationship. As our aim was to develop a methodology that could be applied broadly to other sites, we did not apply transformation to linearize these relationships without a physical justification for the transformation. Evaluating an exhaustive list of data transformations was beyond the scope of the present effort. After identification of candidate variable pairs, we fit an interaction model of the following form where Y represents a continuous response (e.g., $CO_2$, latent heat, etc.), X1 is an independent variable (e.g., air temperature, humidity, etc.), W2 is a categorical variable representing the “period” of observation (i.e., during, before, or after, the event), $\beta$0 is the intercept, $\beta$1,2 are slope parameters for X1 and W2 respectively, and $\beta$3 is the slope parameter for the interaction between X1 and W2:
+Y = 0+ 1X1 + B2W2+ 3X1W2
 
-We fit this interaction model for a “window” of time encompassing the known release event and for every other possible window in the period-of-record. We treated the overall length of the window as an adjustable hyperparameter because we lacked information on exactly how long an abnormal material release might take to reach the footprint of the eddy covariance tower. We also lacked information on how long deposited material might take to induce a vegetation response. In the default base case, we set the window length (n\_days) as 7 days but we ran hyperparameter experiments to determine the effect of setting it to longer lengths of 10 and 14 days. We compared the “effect size” of the interaction term (B3) during the event-encompassing window against all other windows in a “rolling” analysis. Therefore, the overall analysis compares the interaction term of the window of the known event (August 23, 2008) against a window centered on every other observation. We “flagged” specific windows that had an effect size at least as large as that of the known event and with wind conditions at least as “towards” the flux tower as the event as “event detections”. We report the frequency of these event detections as “false positives”.
+This interaction model is fit for a window of time encompassing the known release event and for every other possible window in the period-of-record. The overall length of the window was treated as an adjustable hyperparameter since the length of time for an abnormal material release to reach the footprint of the flux tower may be event-dependent and/or unknown. In addition, the length of time for deposited material to induce a possible vegetation response (or at least a flux tower anomaly) is an unknown quantity. Thus, in the default base case, we set the window length (n\_days) as 7 days, but we ran hyperparameter experiments to determine the result of setting it to longer periods of 10 and 14 days. The window length affects the duration of time designated as before and after the event. The period of time designated as during the event was set as 2 days in all cases. We compared the effect size of the interaction term ($\beta$3) during the event-encompassing window against all other windows in a “rolling” analysis. Therefore, the overall analysis compares the interaction term of the window of the known event (which occurred on August 23, 2008) against a window centered on every other observation. Specific windows that had an effect size at least as large as that of the known event and with wind conditions defined as “towards” the flux tower were flagged as “event detections”. The frequency of these event detections are reported as “event detections”. 
 
-To accomplish this flagging of event detections (i.e., false positives), we defined several adjustable hyperparameters to deal with uncertainty surrounding atmospheric transport and the timing of any vegetation responses to material deposition. The first hyperparameter we defined, wind\_tolerance, reflects the range around the bearing from the facility to the tower location which counts as towards the tower. In the base case, we set wind\_tolerance to 10 degrees but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, event\_quantile\_effect, is an attempt to deal with the fact that we don't know the travel time of any materials to be deposited via an abnormal release or what if any delays exist between deposition and vegetation response. Rather than selecting the maximum value of B3 during a given window or simply the value at the exact time of the event, we set the value of event\_quantile\_effect to correspond with a specific quantile of all B3 values during the event window. In the base default case, this was set at 0.9 but we explored values as low as 0.5. All statistical analyses were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at [doi link], we refer readers to the original providers for data access.
+In order to flag event detections, we defined several adjustable hyperparameters to deal with uncertainty surrounding atmospheric transport and the timing of any possible responses to material deposition. The first hyperparameter we defined, wind\_tolerance, reflects the range around the bearing from the facility to the tower location which counts as towards the tower. In the base default case, we set wind\_tolerance to 10 degrees, but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, event\_quantile\_effect, handles the unknown travel time of any materials to be deposited via an abnormal release or what, if any, delays exist between deposition and vegetation response. Rather than simply selecting the maximum value of $\beta$3 during a given window or the value at the exact time of the event, the value of event\_quantile\_effect is set to correspond with a specific quantile of all $\beta$3 values during the event window. In the base default case, this was set at 0.9, but we explored values as low as 0.5. All statistical analyses were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at [doi link], and we refer readers to the original providers for data access.
 
 \begin{figure}
 	\centering
-	\includegraphics[width=9cm]{../figures/__map}
+	\includegraphics[width=16cm]{../figures/__map}
 	\caption{Map of the three closest Fluxnet tower sites to the Fleurus release location. Note that BE-Lon and BE-Vie are of a similar easterly direction to the site whereas BE-Bra is of an entirely different northerly direction.}
 	\label{fig:study_site}
 \end{figure}
 
 \section{Results}
+
+For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51), we found that only the CO2 versus air temperature comparison had any measure of predictability from the model (R2 > 0.05), strong event effect size, and wind direction coming from the release location to towers in ICOS (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that CO2 versus air temperature relationship at each of the three focal towers had similar R2 values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. 
+
+Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, whereby it was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower (using the default base case wind tolerance of 10 deg) which was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
+
+To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter would hypothetically increase event detection rates, we do not see value in setting this parameter below the median. Likewise, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not see value in setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts (e.g. Mészáros et al. 2016).
+
+For the Fukushima case study, our objective was to test the sensitivity of our approach to a broad scale abnormal release and to introduce a control design to verify behavior on a flux tower where we expect no impact from any abnormal releases. First, we verified that event detection specificity is present at towers likely to be exposed even across long distances if the abnormal release is large (Figure 5). Then, we found a decrease in event detection specificity and an increase in event detection rate moving from the flux tower expected to be most affected (US-Wrc), to a more distant (likely less affected) tower (US-Gle), to a tower likely not exposed at all to the atmospheric plume (OZ-Mul, Figure 5).
 
 \begin{figure}
 	\centering
@@ -102,7 +142,7 @@ To accomplish this flagging of event detections (i.e., false positives), we defi
 
 \begin{figure}
 	\centering
-	\includegraphics[width=8cm]{../figures/__rolling_fleurus}
+	\includegraphics[width=14cm]{../figures/__rolling_fleurus}
 	\caption{Time series plots of rolling event detection analysis for the CO2 and air temperature (ta) variable pair. Panel labels indicate the name of the site, the variable pair (in parentheses), and the false positive rate (a). Event detection lines (orange), interaction effect size (blue), and event effect size (green) correspond to the left vertical axis. Fraction that the wind direction was towards the particular tower (black) corresponds to the right vertical axis.}
 	\label{fig:rolling}
 \end{figure}
@@ -115,14 +155,23 @@ To accomplish this flagging of event detections (i.e., false positives), we defi
 \end{figure}
 
 \section{Discussion}
+Using flux tower records collected closest to the IRE release location, our event detection algorithm was able to identify both a known abnormal release and plausible previously unidentified abnormal releases. There was a broad agreement among the closest flux tower and more distant flux towers as to the timing and frequency of these releases. This suggests that given a facility known to have a prior abnormal release, flux tower networks are capable of providing a means of passive monitoring to detect subsequent releases as well as information on the environmental conditions before, during, and after the release. 
 
-\section{Data Availability Statement}
+More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. Our approach was aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. The ability of our approach to identify a suitable release signature does likely depend on the quality and completeness of the underlying data.
 
-All data and code associated with this manuscript will be made available by the time of publication (or earlier pending the conclusion of US Department of Energy approvals) with a Zenodo DOI at: \href{https://doi.org}{https://doi.org}
+Another contributor to the success of our approach was the fact that Belgium has a relatively dense network of flux towers with long data records. As a result, we were able to compare event detections at the closest tower against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural ecosystem types. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types would differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions (e.g., wind speed and direction, \citep{chuRepresentativenessEddyCovarianceFlux2021}). Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes (e.g. \citep{pastorello2020fluxnet2015}), we suspect that having all the towers in our study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
+
+The biggest improvements to our approach would likely come from coupling our data mining procedure with rigorous air pollutant dispersion modeling (e.g., \citep{meszarosPredictabilityDispersionFukushimaderived2016}. This would eliminate the need for indirect estimation of material transport via uncertainty analyses and instead use simulation results to analytically determine the likely arrival and duration of material deposition. Further improvements could be made by incorporating knowledge about the composition of materials being deposited \citep{international2006iaea, meszarosPredictabilityDispersionFukushimaderived2016} and/or the interactions between material exposure and other environmental stressors \citep{mousseauPlantsLightIonizing2020}, which likely affects the severity and timing of ecosystem responses and by extension the fluxes being measured by a given tower. Such information may help disentangle potential interference of atmospheric contaminants with infrared measurement of CO2 from declines in photosynthetic CO2 uptake of contaminated vegetation given our observation that during and after the known abnormal release, the slopes of the relationships between CO2 and air temperature become less negative than before the event, with lower than expected CO2 at low air temperature. The identity of possible atmospheric contaminants is unknown. We can say, however, that iodine itself is unlikely to interfere with measurements of CO2 given that the absorption spectra of iodine peaks at much shorter wavelengths around 10-7 m \citep{haynes2016crc} compared to that of CO2 which peaks around 1700-2100 10-9 m (LICOR Biosciences Inc., Lincoln, NE).
+
+The fact that we were able to identify a known release (along with potential unidentified releases) in the data record despite not having a detailed radiological or atmospheric transport model is a strength of our approach. Because our approach is light-weight and resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration impacts to the plant community within flux tower footprints to ensure human health and industrial safety.
+
+% \section{Data Availability Statement}
+
+% All data and code associated with this manuscript will be made available by the time of publication (or earlier pending the conclusion of US Department of Energy approvals) with a Zenodo DOI at: \href{https://doi.org}{https://doi.org}
 
 \section{Acknowledgements}
 
-This are Acknowledgements
+JS built models, analyzed data, and wrote the paper. SS, LTD, and AJ contributed to the conception of the manuscript. ECT, VAK, LTD, and EC edited the manuscript. All authors provided interpretation of results. We acknowledge funding for supporting AmeriFlux data portal: U.S. Department of Energy Office of Science. The data used in this activity has been also funded by CarboEuropeIP (EU-FP6), IMECC (EU-FP6). This work was supported by Los Alamos National Laboratory (LDRD-20220062ER).
 
 \bibliographystyle{jsta}
 \bibliography{fluxnet}
