stash completed conversion

--- a/manuscript/fluxnet.bib
+++ b/manuscript/fluxnet.bib
@@ -83,7 +83,7 @@
   author    = {IAEA},
   year      = {2006},
   series    = {Radiological Assessment Reports Series},
-  publisher = {INTERNATIONAL ATOMIC ENERGY AGENCY},
+  publisher = {International Atomic Energy Agency},
   address   = {Vienna},
   isbn      = {92-0-104905-6},
   keywords  = {tocite},
