--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -15,6 +15,7 @@
 \usepackage{listings}
 \usepackage{lineno}
 \usepackage{setspace}
+\usepackage{gensymb}
 
 \linenumbers
 
@@ -88,9 +89,9 @@ pdfauthor={Jemma Stachelek}
 Ensuring accurate detection and attribution of abnormal releases of radioactive material is critical for protecting human health and safety. Most commonly, such detection is accomplished via active monitoring approaches involving the collection of physical samples. This is labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. As an alternative first step towards passive monitoring, we developed an approach using eddy flux tower data records to identify signals from a known abnormal release and quantify the extent to which that signal also occurs at other times in the data record. Through two case-studies, one of which targeted the Fukushima nuclear disaster and the other targeting a radioisotope production facility, we tested our approach and identified several potential heretofore unidentified abnormal releases that were consistent with atmospheric circulation patterns and/or wind direction from known release sites. Because our approach is relatively simple and is resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration anomalies in flux tower data to ensure human health and industrial safety.
 
 \section{Introduction}
-Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific sampling or trace gas measurements \citep{loyalkaMechanicsAerosolsNuclear1983} sometimes as a part of international monitoring networks (e.g., \citep{sangiorgiEuropeanRadiologicalData2020}. A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Active monitoring with such means is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
+Detecting abnormal releases of radioactive material (hereafter simply “abnormal releases”) is important as a means of ensuring human health and industrial safety. The detection of such releases is typically accomplished using active approaches that require site-specific sampling or trace gas measurements \citep{loyalkaMechanicsAerosolsNuclear1983} sometimes as a part of international monitoring networks \citep[e.g.,][]{sangiorgiEuropeanRadiologicalData2020}. A potential shortcoming of these active monitoring approaches is that they require collection of physical samples (particulates, gasses, and other signal carriers) to retrospectively determine the nature of the release and the events that may have led up to it. Active monitoring with such means is thus labor intensive and limits the temporal and spatial resolution of any detected events to a relatively coarse level. 
 
-A potential alternative to active monitoring is passive monitoring (e.g., the German Integrated Measuring and Information system [IMIS] and the International Monitoring System [IMS], \citep{bieringerMonitoringGroundlevelAir2004}. Although existing wide area monitoring systems are already critical components of abnormal release detection and tracking programs \citep{mediciIMSRadionuclideNetwork2001}, diversification-of-approach may increase the programs' sensitivity and comprehensiveness. With a greater diversity of methods, monitoring programs may be able to detect a wider array of constituents with differing characteristics. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves the use of eddy covariance data to capture a signal from known abnormal releases. This signal is then used to investigate whether additional potential abnormal releases exist at other times in the data record. We focused on eddy flux towers, as they are a potential source of abnormal release signatures, are globally distributed, have been in near continuous operation for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
+A potential alternative to active monitoring is passive monitoring \citep[e.g., the German Integrated Measuring and Information system and the International Monitoring System,][]{bieringerMonitoringGroundlevelAir2004}. Although existing wide area monitoring systems are already critical components of abnormal release detection and tracking programs \citep{mediciIMSRadionuclideNetwork2001}, diversification-of-approach may increase the programs' sensitivity and comprehensiveness. With a greater diversity of methods, monitoring programs may be able to detect a wider array of constituents with differing characteristics. In the present study, we developed a novel passive monitoring approach to supplement existing programs that involves the use of eddy covariance data to capture a signal from known abnormal releases. This signal is then used to investigate whether additional potential abnormal releases exist at other times in the data record. We focused on eddy flux towers, as they are a potential source of abnormal release signatures, are globally distributed, have been in near continuous operation for several decades, and can be relatively cheaply and easily deployed in locations of interest. Therefore, they constitute a rich target for data mining approaches aimed at identifying signatures resulting from direct interference of radioactive material with target measurements and/or the indirect signal of vegetation responses to the deposition of radioactive material.
 
 Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
@@ -129,7 +130,7 @@ For the IRE case study, among all possible pairwise combinations of dependent an
 
 Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, whereby it was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower (using the default base case wind tolerance of 10 deg) which was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
-To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter would hypothetically increase event detection rates, we do not see value in setting this parameter below the median. Likewise, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not see value in setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts (e.g. \citep{meszarosPredictabilityDispersionFukushimaderived2016}).
+To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter would hypothetically increase event detection rates, we do not see value in setting this parameter below the median. Likewise, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not see value in setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts \citep[e.g.][]{meszarosPredictabilityDispersionFukushimaderived2016}.
 
 For the Fukushima case study, our objective was to test the sensitivity of our approach to a broad scale abnormal release and to introduce a control design to verify behavior on a flux tower where we expect no impact from any abnormal releases. First, we verified that event detection specificity is present at towers likely to be exposed even across long distances if the abnormal release is large (Figure 5). Then, we found a decrease in event detection specificity and an increase in event detection rate moving from the flux tower expected to be most affected (US-Wrc), to a more distant (likely less affected) tower (US-Gle), to a tower likely not exposed at all to the atmospheric plume (OZ-Mul, Figure 5).
 
@@ -149,23 +150,30 @@ For the Fukushima case study, our objective was to test the sensitivity of our a
 \begin{figure}
 	\centering
 	\includegraphics[width=11cm]{../figures/__interaction_belon}
-	\caption{Interaction plots at the BE-Lon site between air temperature (ta) and $CO_2$ (co2) for the period of the known abnormal release (A) and an arbitrary non-release period (B). Also shown is the distribution of all interaction effect sizes (gray) compared with the effect size of the time period shown in the corresponding left panels (orange, C, D).}
+	\caption{Interaction plots at the BE-Lon site between air temperature ($C^{\circ}$) and $CO_2$ (ppm) for the period of the known abnormal release (A) and an arbitrary non-release period (B). Also shown is the distribution of all interaction effect sizes (gray) compared with the effect size of the time period shown in the corresponding left panels (orange, C, D).}
 	\label{fig:interaction}
 \end{figure}
 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=14cm]{../figures/__rolling_fleurus}
-	\caption{Time series plots of rolling event detection analysis for the $CO_2$ and air temperature (ta) variable pair. Panel labels indicate the name of the site, the variable pair (in parentheses), and the false positive rate (a). Event detection lines (orange), interaction effect size (blue), and event effect size (green) correspond to the left vertical axis. Fraction that the wind direction was towards the particular tower (black) corresponds to the right vertical axis.}
+	\includegraphics[width=16cm]{../figures/__rolling_fleurus}
+	\caption{Time series plots (2004-2013) of rolling event detection analysis at the IRE site for the $CO_2$ and air temperature ($C^{\circ}$) variable pair. Event detection lines (orange), interaction effect size (blue), and event effect size (dashed black line) are shown in the top panels. The fraction of time that the wind direction was towards the particular tower (solid black) are shown in the corresponding bottom panels.}
 	\label{fig:rolling}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\includegraphics[width=12cm]{../figures/__hyperparameter_experiment}
-	\caption{Sensitivity of false event detection to different hyperparameter values.}
+	\includegraphics[width=16cm]{../figures/__hyperparameter_experiment}
+	\caption{Sensitivity of event detection at the IRE site to different hyperparameter values (points) alongside potential relationship (solid line) and confidence interval (shaded region).}
 	\label{fig:hyperparameter}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=16cm]{../figures/__rolling_fukushima}
+	\caption{Time series plots (2010-2013) of rolling event detection analysis for the Fukushima disaster case study. The depicted variable pair is latent heat and relative humidity. Event detection lines (orange), interaction effect size (blue), and event effect size (dashed black line) are shown in the top panels. The fraction of time that the wind direction was towards the particular tower (solid black) are shown in the corresponding bottom panels.}
+	\label{fig:fukushima}
 \end{figure}
 
 \section{Discussion}
@@ -173,9 +181,9 @@ Using flux tower records collected closest to the IRE release location, our even
 
 More generally, we show that flux tower records have value for this type of data mining despite the apparent noisiness of the data \citep{fratiniEddyCovarianceFlux2018}. We attribute the sensitivity of our approach to the fact that we fit successive interaction models to limited sections of the data record, and we leveraged bivariate relationships to constrain noisiness in individual data records. Our approach was aided by the fact that this type of scale-free data mining is largely unaffected by systematic errors due to uncertainty in calibration standards and/or low resolution in specific sensor packages deployed on the towers. This is because although such systematic errors may bias the magnitude of overall flux values, which would be a problem for typical uses of flux towers that deal directly in the units of the measured data, they do not reduce the overall confidence in individual values \citep{langfordEddycovarianceDataLow2015}, which for our purposes might represent an abnormal release signal. The ability of our approach to identify a suitable release signature does likely depend on the quality and completeness of the underlying data.
 
-Another contributor to the success of our approach was the fact that Belgium has a relatively dense network of flux towers with long data records. As a result, we were able to compare event detections at the closest tower against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural ecosystem types. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types would differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions (e.g., wind speed and direction, \citep{chuRepresentativenessEddyCovarianceFlux2021}). Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes (e.g. \citep{pastorello2020fluxnet2015}), we suspect that having all the towers in our study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
+Another contributor to the success of our approach was the fact that Belgium has a relatively dense network of flux towers with long data records. As a result, we were able to compare event detections at the closest tower against more distant towers (refer to Figure 1), increasing our confidence that we were seeing a true signal and not spurious noise. This level of flux tower density may be found in the United States, Western/Central Europe, Japan, and Australia, which have high densities of flux towers, but not throughout the rest of the world \citep{baldocchi2001fluxnet,pastorello2020fluxnet2015}. As a result, this may impose geographical limits on our approach. Another attribute that likely aided our investigations was the fact that all three of the flux towers we examined were located in similar agricultural ecosystem types. Although investigating whether or not flux tower combinations with differing ecosystems would yield similar results is beyond the scope of the present study, we suspect that the data records among towers in disparate ecosystem types would differ too drastically to be of comparative use. For example, \citet{pastorello2020fluxnet2015} show that towers in the crop ecosystem type, of which all three sites used in this study belong, have a relatively narrow distribution of fluxes (i.e., gross primary production, GPP) compared to towers in the grassland or evergreen broadleaf forest types. One reason for this narrow spread in crop ecosystems may be the relative homogeneity of flux tower footprints in crop ecosystems, which typically extend to within 1000m of the tower depending on atmospheric conditions \citep[e.g., wind speed and direction,][]{chuRepresentativenessEddyCovarianceFlux2021}. Given that towers in other ecosystem types with a more heterogeneous flux tower footprint have a wider distribution of fluxes \citep[e.g.][]{pastorello2020fluxnet2015}, we suspect that having all the towers in our study located in a homogenous ecosystem type was helpful in reducing the spikiness and spread of the data. 
 
-The biggest improvements to our approach would likely come from coupling our data mining procedure with rigorous air pollutant dispersion modeling (e.g., \citep{meszarosPredictabilityDispersionFukushimaderived2016}. This would eliminate the need for indirect estimation of material transport via uncertainty analyses and instead use simulation results to analytically determine the likely arrival and duration of material deposition. Further improvements could be made by incorporating knowledge about the composition of materials being deposited \citep{international2006iaea, meszarosPredictabilityDispersionFukushimaderived2016} and/or the interactions between material exposure and other environmental stressors \citep{mousseauPlantsLightIonizing2020}, which likely affects the severity and timing of ecosystem responses and by extension the fluxes being measured by a given tower. Such information may help disentangle potential interference of atmospheric contaminants with infrared measurement of $CO_2$ from declines in photosynthetic $CO_2$ uptake of contaminated vegetation given our observation that during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature. The identity of possible atmospheric contaminants is unknown. We can say, however, that iodine itself is unlikely to interfere with measurements of $CO_2$ given that the absorption spectra of iodine peaks at much shorter wavelengths around 10-7 m \citep{haynes2016crc} compared to that of $CO_2$ which peaks around 1700-2100 10-9 m (LICOR Biosciences Inc., Lincoln, NE).
+The biggest improvements to our approach would likely come from coupling our data mining procedure with rigorous air pollutant dispersion modeling \cite[e.g.,][]{meszarosPredictabilityDispersionFukushimaderived2016}. This would eliminate the need for indirect estimation of material transport via uncertainty analyses and instead use simulation results to analytically determine the likely arrival and duration of material deposition. Further improvements could be made by incorporating knowledge about the composition of materials being deposited \citep{international2006iaea, meszarosPredictabilityDispersionFukushimaderived2016} and/or the interactions between material exposure and other environmental stressors \citep{mousseauPlantsLightIonizing2020}, which likely affects the severity and timing of ecosystem responses and by extension the fluxes being measured by a given tower. Such information may help disentangle potential interference of atmospheric contaminants with infrared measurement of $CO_2$ from declines in photosynthetic $CO_2$ uptake of contaminated vegetation given our observation that during and after the known abnormal release, the slopes of the relationships between $CO_2$ and air temperature become less negative than before the event, with lower than expected $CO_2$ at low air temperature. The identity of possible atmospheric contaminants is unknown. We can say, however, that iodine itself is unlikely to interfere with measurements of $CO_2$ given that the absorption spectra of iodine peaks at much shorter wavelengths around 10-7 m \citep{haynes2016crc} compared to that of $CO_2$ which peaks around 1700-2100 10-9 m (LICOR Biosciences Inc., Lincoln, NE).
 
 The fact that we were able to identify a known release (along with potential unidentified releases) in the data record despite not having a detailed radiological or atmospheric transport model is a strength of our approach. Because our approach is light-weight and resistant to systematic errors in the observational record, it has broad applicability beyond specific constituents and ecosystem types to identify a wide variety of limited-duration impacts to the plant community within flux tower footprints to ensure human health and industrial safety.
 
