reference supplementary table

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -126,7 +126,7 @@ In order to flag event detections, we defined several adjustable hyperparameters
 
 \section{Results}
 
-For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05), strong event effect size, and wind direction coming from the release location to towers in ICOS (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. 
+For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05), strong event effect size, and wind direction coming from the release location to towers in ICOS (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. 
 
 Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, whereby it was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower (using the default base case wind tolerance of 10 deg) which was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
